<resources>
    <string name="app_name">АМО лабораторна 1</string>
    <string name="task1">Завдання №1</string>
    <string name="task2">Завдання №2</string>
    <string name="task3">Завдання №3</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="Result">Результат</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="k">k</string>
    <string name="d">d</string>
</resources>
